--- a/src/pages/admin/details-edting-guest/details-edting-guest.html
+++ b/src/pages/admin/details-edting-guest/details-edting-guest.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>details_edting_guest</ion-title>
+    <ion-title>แก้ไขข้อมูลลูกค้า</ion-title>
   </ion-navbar>
 
 </ion-header>
