--- a/src/pages/admin/edits-admin/edits-admin.html
+++ b/src/pages/admin/edits-admin/edits-admin.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edits_admin</ion-title>
+    <ion-title>แก้ไขข้อมูลผู้ดูแลระบบ</ion-title>
   </ion-navbar>
 
 </ion-header>
