--- a/src/pages/search-equipment/search-equipment.html
+++ b/src/pages/search-equipment/search-equipment.html
@@ -8,7 +8,7 @@
   <ion-toolbar color="danger">
    
   <ion-title  *ngIf="!isSearchbarOpened">
-     ค้นหาเขต
+     ค้นหาอุปกรณ์
   </ion-title>
   <ion-searchbar  
   *ngIf="isSearchbarOpened" 
