--- a/src/pages/show-tec-detail/show-tec-detail.html
+++ b/src/pages/show-tec-detail/show-tec-detail.html
@@ -1,7 +1,7 @@
 <ion-header hidden>
 
   <ion-navbar>
-    <ion-title>showTecDetail</ion-title>
+    <ion-title>ข้อมูลร้านค้า</ion-title>
   </ion-navbar>
 
 </ion-header>
