--- a/src/pages/technician/chart-room/customer-amount/customer-amount.html
+++ b/src/pages/technician/chart-room/customer-amount/customer-amount.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>customer_amount</ion-title>
+    <ion-title>จำนวนลูกค้าที่มาใช้บริการ</ion-title>
   </ion-navbar>
 
 </ion-header>
