--- a/src/pages/technician/technician.html
+++ b/src/pages/technician/technician.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar hideBackButton>
-    <ion-title>technician</ion-title>
+    <ion-title>หน้าหลัก</ion-title>
   </ion-navbar>
 
 </ion-header>
