--- a/src/pages/admin/edits-tec/edits-tec.html
+++ b/src/pages/admin/edits-tec/edits-tec.html
@@ -4,9 +4,16 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
-  <ion-navbar>
+  <ion-navbar hideBackButton>
+
+        <ion-buttons  left>
+                <button ion-button icon-only (click)="back_technician()" *ngIf="!tech_editing">
+                        <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
+                    </button>
+            </ion-buttons>
+
     <ion-title *ngIf="!tech_editing">แก้ไขข้อมูลช่าง</ion-title>
         <ion-buttons end>
             <button ion-button (click)="tech_editing=!tech_editing" *ngIf="!tech_editing">
@@ -26,8 +33,8 @@
         </ion-buttons>
 
         <ion-buttons >
-            <button ion-button (click)="tech_editing=!tech_editing" *ngIf="tech_editing">
-                <ion-icon name="arrow-back" md="md-arrow-back"></ion-icon>
+            <button ion-button icon-only (click)="tech_editing=!tech_editing" *ngIf="tech_editing">
+                    <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
             </button>
         </ion-buttons>
 
