--- a/src/pages/technician/chart-room/chart-room.html
+++ b/src/pages/technician/chart-room/chart-room.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>chart_room</ion-title>
+    <ion-title>ระบบสถิติ</ion-title>
   </ion-navbar>
 
 </ion-header>
