--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,28 @@
-<ion-header>  
+<ion-header>
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  
 </ion-header>
 
 <ion-content padding>
-    
-  <ion-row class="logo-row">
-    <ion-col></ion-col> 
-        <ion-img width="180" height="120" src="assets/imgs/windows.jpg"></ion-img>
-    <ion-col></ion-col>
-  </ion-row>
+   <div class="logo-row">
+      <ion-row style="margin-left:20px">
+          <ion-col>
+              <b>Grab</b><img src="assets/icon/electronics.png">
+            </ion-col>
+    </ion-row>
+  
+    <ion-row style="text-align:center;">
+      <ion-col>
+        <b>Electronic</b>
+      </ion-col>
+    </ion-row>
+  
+    <ion-row style="float:right;margin-right:20px;">
+      <ion-col>
+          <b>Service</b>
+      </ion-col>
+    </ion-row>
+   </div> 
+  
 
   <div class="login-box">
 
