--- a/src/pages/search-equipment/search-equipment.html
+++ b/src/pages/search-equipment/search-equipment.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="primary">
    
   <ion-title  *ngIf="!isSearchbarOpened">
      ค้นหาอุปกรณ์
