--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -6,7 +6,7 @@
 -->
 
 <ion-header>
-  <ion-toolbar color="danger">
+  <ion-toolbar color="primary" >
     
   <ion-title  *ngIf="!isSearchbarOpened">
     ค้นหาเขต
