--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar hideBackButton>
+  <ion-navbar hideBackButton color="primary">
     <ion-title>ผู้ดูแลระบบ</ion-title>
   </ion-navbar>
 
