--- a/src/pages/admin/edits-tec/edits-tec.html
+++ b/src/pages/admin/edits-tec/edits-tec.html
@@ -6,7 +6,7 @@
 -->
 <ion-header no-border>
 
-  <ion-navbar hideBackButton>
+  <ion-navbar hideBackButton color="primary">
 
         <ion-buttons  left>
                 <button ion-button icon-only (click)="back_technician()" *ngIf="!tech_editing">
