--- a/src/pages/customer-address/customer-address.html
+++ b/src/pages/customer-address/customer-address.html
@@ -6,7 +6,7 @@
 -->
 <ion-header hidden>
 
-    <ion-navbar >
+    <ion-navbar color="primary">
         <ion-title>ข้อมูลลูกค้า</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="editng=!editng" *ngIf="!editng">แก้ไข
