--- a/src/pages/detail-tec/detail-tec.html
+++ b/src/pages/detail-tec/detail-tec.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>รายละเอียดร้านค้า</ion-title>
   </ion-navbar>
 
@@ -19,7 +19,7 @@
       <!-- <ion-list *ngFor="let item of detail_tecnician"> -->
       <ion-row style="margin-top:15px">
         <ion-col> </ion-col>
-            <img src="{{show_imgs}}/Final_Project/service/{{technician_store.image_name}}" width="240" height="180px">
+            <img src="{{show_imgs}}/service/{{technician_store.image_name}}" width="240" height="180px">
         <ion-col></ion-col>
         <div  style="margin:auto"><h3>ชื่อร้าน:{{technician_store.name_store}} ({{technician_store.star}}<ion-icon name="star" color="danger"></ion-icon>)</h3>
           
