--- a/src/pages/show-tec-detail/show-tec-detail.html
+++ b/src/pages/show-tec-detail/show-tec-detail.html
@@ -1,6 +1,6 @@
 <ion-header hidden>
 
-  <ion-navbar>
+  <ion-navbar >
     <ion-title>ข้อมูลร้านค้า</ion-title>
   </ion-navbar>
 
@@ -23,7 +23,7 @@
      
     <ion-list *ngFor="let item of Detail_for">
       <ion-card>
-        <img src="{{show_imgs}}/Final_Project/service/{{item.image_name}}" />
+        <img src="{{show_imgs}}/service/{{item.image_name}}" />
         <ion-card-content>
           <ion-card-title>
             <ion-grid>
