--- a/src/pages/technician/rent/check-img-tax/check-img-tax.html
+++ b/src/pages/technician/rent/check-img-tax/check-img-tax.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>ตรวจสอบการโอน</ion-title>
   </ion-navbar>
 
@@ -15,7 +15,7 @@
 
 <ion-content padding>
  
-  <ion-grid>
+  <!-- <ion-grid>
       <ion-row>
           <ion-col col-12> 
             <div>
@@ -23,9 +23,9 @@
             </div>
           </ion-col>
       </ion-row>
-  </ion-grid>
+  </ion-grid> -->
     
   
   
-  <img src="{{show_imgs}}/Final_Project/service/{{img}}"/>
+  <img src="{{show_imgs}}/service/{{img}}"/>
 </ion-content>
