--- a/src/pages/technician/technician.html
+++ b/src/pages/technician/technician.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar hideBackButton>
+  <ion-navbar hideBackButton color="primary">
     <ion-title>หน้าหลัก</ion-title>
   </ion-navbar>
 
