--- a/src/pages/admin/details-edting-guest/details-edting-guest.html
+++ b/src/pages/admin/details-edting-guest/details-edting-guest.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>แก้ไขข้อมูลลูกค้า</ion-title>
   </ion-navbar>
 
