--- a/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.html
+++ b/src/pages/technician/chart-room/chart-content-customer/chart-content-customer.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>ระดับความพึงพอใจลูกค้า</ion-title>
   </ion-navbar>
 
